[package]
name = "retris"
version = "0.5.1"
edition = "2021"
authors = ["Hyejin Lee <genie4cs@gmail.com>"]
repository = "https://github.com/genieCS/retris"
description = "This is a Rust implementation of tetris using the Cursive library"
license = "MIT"
readme = "README.md"
keywords = ["tui", "cursive", "tetris", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm-backend"]
crossterm-backend = ["cursive/crossterm-backend", "crossterm"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion-backend"]
blt-backend = ["cursive/blt-backend"]
wasm-backend = ["cursive/wasm-backend", "wasm-bindgen", "wasm-bindgen-futures", "getrandom", "js-sys", "web-sys"]

[dependencies]
rand = "0.8.4"

[dependencies.wasm-bindgen]
optional = true
version = "0.2.63"

[dependencies.wasm-bindgen-futures]
version = "0.4.18"
optional = true

[dependencies.getrandom]
version = "0.2.10"
features = ["js"]
optional = true

[dependencies.js-sys]
version = "0.3.64"
optional = true

[dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlCanvasElement",
    "console",
]
optional = true

[dependencies.cursive]
git = "https://github.com/geniecs/cursive"
default-features = false
features = ["wasm-backend"]

[dependencies.crossterm]
version = "0.26.1"
optional = true
